// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/helmfile/extract extractPackageFile() skip chart that does not have specified version 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": undefined,
      "depName": "example",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
      "skipReason": "local-chart",
    },
  ],
}
`;

exports[`lib/manager/helmfile/extract extractPackageFile() skip chart with special character in the name 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example/example",
      "registryUrls": Array [
        "https://kiwigrid.github.io",
      ],
      "skipReason": "unsupported-chart-type",
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example?example",
      "registryUrls": Array [
        "https://kiwigrid.github.io",
      ],
      "skipReason": "unsupported-chart-type",
    },
  ],
}
`;

exports[`lib/manager/helmfile/extract extractPackageFile() skip chart with unknown repository 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [],
      "skipReason": "unknown-registry",
    },
  ],
}
`;

exports[`lib/manager/helmfile/extract extractPackageFile() skip if repository details are not specified 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [],
      "skipReason": "unknown-registry",
    },
  ],
}
`;

exports[`lib/manager/helmfile/extract extractPackageFile() skip local charts 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "depName": "./charts/example",
      "skipReason": "local-chart",
    },
  ],
}
`;

exports[`lib/manager/helmfile/extract extractPackageFile() skip templetized release with invalid characters 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "{{\`{{ .Release.Name }}\`}}",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
      "skipReason": "unsupported-chart-type",
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
    },
  ],
}
`;
